<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/homeid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="12dp"

            android:textStyle="bold" />

        <Button
            android:id="@+id/booksid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/show_book"
            android:textColor="@color/white"
            android:textSize="12dp"

            android:textStyle="bold"

            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/purches"
            android:textColor="@color/white"
            android:textSize="12dp"

            android:textStyle="bold"

            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/contuct"
            android:textColor="@color/white"
            android:textSize="12dp"

            android:textStyle="bold"

            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Categories"
        android:textSize="50dp"
        android:textColor="@color/black"
        android:layout_margin="20dp"/>


    <Button
        android:id="@+id/engid"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="5dp"
        android:text="@string/Eng_book"
        android:textSize="40dp"
        android:layout_margin="20dp"
        android:textColor="@color/white"

        />

    <Button
        android:id="@+id/kidsid"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/Kids_book"
        android:textSize="40dp"
        android:layout_margin="20dp"
        />

    <Button
        android:id="@+id/jobid"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/Job_book"
        android:textSize="40dp"
        android:layout_margin="20dp"
        />


    <Button
        android:id="@+id/literatureid"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/Literature_book"
        android:textSize="40dp"
        android:layout_margin="20dp"
        />
</LinearLayout>