<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_200"
    tools:context=".addbook">

    <Button
        android:id="@+id/homeid"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="20dp"
        android:text="@string/home"
        android:textSize="30dp"

        />

    <Button
        android:id="@+id/add_engid"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="20dp"
        android:text="@string/add_eng_book"
        android:textSize="30dp"

        />

    <Button
        android:id="@+id/add_kidsid"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="20dp"
        android:text="@string/add_kids_book"
        android:textSize="30dp"

        />

    <Button
        android:id="@+id/add_jobid"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="20dp"
        android:text="@string/add_job_book"
        android:textSize="30dp"

        />

    <Button
        android:id="@+id/add_liteturatureid"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="20dp"
        android:text="@string/add_liteturature_book"
        android:textSize="30dp"

        />


</LinearLayout>