<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/homeid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="12dp"

            android:textStyle="bold" />

        <Button
            android:id="@+id/booksid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/show_book"
            android:textColor="@color/white"
            android:textSize="12dp"

            android:textStyle="bold"

            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/purches"
            android:textColor="@color/white"
            android:textSize="12dp"

            android:textStyle="bold"

            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/contuct"
            android:textColor="@color/white"
            android:textSize="12dp"

            android:textStyle="bold"

            />

    </LinearLayout>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="570dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="32dp"
        android:textStyle="bold"


        />

    <Button
        android:id="@+id/adminid"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="Admin"
        android:textSize="20dp"/>

</LinearLayout>