<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_200"
    tools:context=".add_eng_book">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/nameid"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="30dp" />

    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:text="@string/writer_name"
            android:layout_margin="20dp"
            />
        <EditText
            android:id="@+id/writer_nameid"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="30dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/prize"
            android:layout_margin="20dp"
            />
        <EditText
            android:id="@+id/prizeid"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="30dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/addid"
        android:layout_width="400dp"
        android:textSize="40dp"
        android:layout_height="90dp"
        android:layout_margin="20dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/homeid"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:text="@string/home"
        android:layout_margin="20dp"
        android:textSize="40dp"
        />
</LinearLayout>